implemented updateprofile functionality

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,10 @@ PORT=5001
 
 JWT_SECRET=mysecretkey
 
-NODE_ENV="development"
+NODE_ENV=development
+
+CLOUDINARY_CLOUD_NAME=dn5cldxao
+
+CLOUDINARY_API_KEY=439311841753197
+
+CLOUDINARY_API_SECRET=7loTq6ZsO5z5jSR6oLFwf3MoORQ
